# vivado_init_project

./: .gitignore  CMakeLists.txt  README.md
src/hls/: CMakeLists.txt
src/hls/foobar/: CMakeLists.txt  foobar.hpp
src/hls/hlsled/: CMakeLists.txt  hlsled.cpp  hlsled.hpp  piyo.cpp  piyo.hpp  tb.cpp
vivado/: CMakeLists.txt
vivado/dfx/: CMakeLists.txt  set_board_path.config.tcl
vivado/zynq/: CMakeLists.txt  design_1.tcl
vivado/zynq/src/: main.cpp  platform.c
